# primeflux

./: Makefile  pyproject.toml
.github/workflows/: pr_dev.yml  push.yml
backend/: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  test_endpoints.http  test_oto.http
backend/.github/workflows/: pr_dev.yml  push.yml
backend/Docker/Django/: dockerfile  entrypoint.sh
backend/Docker/compose/: docker-compose.dev.yml
backend/core/apps/accounts/: admin.py  apps.py  filters.py  managers.py  models.py  urls.py  views.py
backend/core/apps/accounts/migrations/: 0001_initial.py  0002_user_is_email_verified_user_is_phone_verified.py  0003_alter_user_password.py  0004_driver.py
backend/core/apps/accounts/serializers/: auth.py  driver.py  user.py
backend/core/apps/accounts/tests/: test_auth_serializers.py  test_auth_views.py  test_drivers.py  test_managers.py  test_models.py  test_profile_view.py  test_user_filters.py  test_user_serializer.py
backend/core/apps/accounts/views/: auth_views.py  health_check_views.py  profile.py
backend/core/apps/logistics/: apps.py  models.py
backend/core/apps/logistics/migrations/: 0001_initial.py
backend/core/core_functions/pagination/: pagination.py
backend/core/core_functions/services/: otp.py
backend/core/core_functions/services/cache/: redis_client.py
backend/core/core_functions/utils/: collections.py  misc.py
backend/core/project/: urls.py
backend/core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py  third_party.py
backend/core/project/settings/template/: settings.dev.py
core/core_functions/utils/: collections.py  misc.py  settings.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core/project/settings/template/: settings.dev.py
