[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "django-filter>=25.2",
    "django-split-settings>=1.3.2",
    "djangorestframework>=3.17.1",
    "editorconfig>=0.17.1",
    "psycopg2>=2.9.12",
    "pyyaml>=6.0.3",
]
