[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "africastalking>=2.0.2",
    "django>=6.0.4",
    "django-filter>=25.2",
    "django-redis>=6.0.0",
    "django-silk>=5.5.0",
    "django-split-settings>=1.3.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt[cryptography]>=5.5.1",
    "drf-spectacular>=0.29.0",
    "editorconfig>=0.17.1",
    "psycopg2>=2.9.12",
    "pyyaml>=6.0.3",
    "redis>=8.0.0",
    "resend>=2.30.1",
]

[dependency-groups]
dev = [
    "colorlog>=6.10.1",
    "django-stubs>=6.0.4",
    "djangorestframework-stubs>=3.17.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.14",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
line-length = 119
target-version = "py312"
exclude = [
    ".venv",
    "migrations",
    "__pycache__",
    "static",
    "media",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"core/project/settings/*.py" = [
    "F821",  # undefined name (common in split settings)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]

strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

exclude = [
    "migrations/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = "core.project.settings.*"
disable_error_code = [
    "name-defined",
]

[tool.django-stubs]
django_settings_module = "core.project.settings"
